# sdk

./: .gitignore  AGENTS.md  LICENSE  pyproject.toml
tests/: __init__.py  conftest.py  test_artifact.py  test_backends.py  test_cli.py  test_init.py  test_media.py  test_metrics.py  test_run.py
tests/backends/: __init__.py  test_api.py  test_local.py  test_remote.py
tests/clients/: __init__.py  test_local.py  test_remote.py
tests/e2e/: __init__.py  conftest.py  test_local_e2e.py  test_remote_e2e.py
underfit/: __init__.py  artifact.py  project.py  run.py
underfit/backends/: __init__.py  api.py  base.py  local.py  remote.py
underfit/cli/: __init__.py
underfit/clients/: __init__.py  local.py  remote.py
underfit/lib/: __init__.py  metrics.py  terminal.py
underfit/media/: __init__.py  _helpers.py  audio.py  html.py  image.py  video.py
underfit/wordlists/: adjectives.txt  nouns.txt
