[project]
name = "underfit"
version = "0.1.0"
description = "Python SDK for the Underfit model reporter"
authors = [{ name = "Mitchell Goff" }]
requires-python = ">=3.9"

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
license = "MIT"
license-files = ["LICENSE"]

dependencies = []

[project.optional-dependencies]
view = ["underfit-api"]
testing = [
    "ruff",
    "ty",
    "pytest",
    "pytest-mock",
    "underfit-api",
    "psutil",
]

[project.scripts]
underfit = "underfit.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
underfit-api = { path = "../api" }

[tool.setuptools.package-data]
"underfit" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py39"

lint.select = ["ALL"]
lint.ignore = [
    "ARG", "ASYNC", "BLE", "C", "EM", "ERA", "FBT", "PERF", "PLR", "Q", "RET", "RUF", "TC", "TD", "TRY",
    "ANN401", "COM812", "E701", "FIX002", "N802", "PT018", "S101", "S310",  # NOTE: ruff's S310 seems broken right now
]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
addopts = "--disable-plugin-autoload"
